# training

./: .gitignore  Dockerfile  README.md  pyproject.toml  todo.txt
resources/: enumdescs.yml  report.yml  styles.css
src/training/: helper.py  main.py  parallel.py  reward.py  reward_helper.py  reward_util.py  simdb.py  simrunner.py  simrunner_tournament.py  tryout.py  udp.py  vector_helper.py
src/training/controller/: blind_tumblr_controller.py  stand_still_controller.py  test_turn_controller.py  tumblr_controller.py
src/training/explore/: analysis.py  blackjack.py  enumdescs.py  export.py  qlearning.py  report.py
src/training/sgym/: core.py  (+3 more)
tests/: create_reward.py  test_reward.py  test_sgym.py  test_simrunner.py  test_sumosim_helper.py
tests/data/: wall-rw-6b1d59-00_stay-in-field_stay-in-field.json  wall-rw-6b1d59-01_tumblr_stay-in-field.json  wall-rw-6b1d59-02_stay-in-field_stay-in-field.json  wall-rw-6b1d59-03_stay-in-field_stay-in-field.json  wall-rw-6b1d59-04_tumblr_stay-in-field.json  wall-rw-6b1d59-05_stay-in-field_blind-tumblr.json  wall-rw-6b1d59-06_tumblr_blind-tumblr.json  wall-rw-6b1d59-07_stay-in-field_stay-in-field.json  wall-rw-6b1d59-08_stay-in-field_stay-in-field.json  wall-rw-6b1d59-09_stay-in-field_stay-in-field.json  wall-rw-6b1d59-10_tumblr_blind-tumblr.json  wall-rw-6b1d59-11_tumblr_stay-in-field.json  wall-rw-6b1d59-12_stay-in-field_blind-tumblr.json  wall-rw-6b1d59-13_tumblr_stay-in-field.json  wall-rw-6b1d59-14_stay-in-field_stay-in-field.json  wall-rw-6b1d59-15_tumblr_blind-tumblr.json  wall-rw-6b1d59-16_stay-in-field_blind-tumblr.json  wall-rw-6b1d59-17_tumblr_stay-in-field.json  wall-rw-6b1d59-18_stay-in-field_blind-tumblr.json  wall-rw-6b1d59-19_tumblr_stay-in-field.json
training/: UdpClient.py  consts.py  helper.py  main.py  reward.py  reward_helper.py  reward_util.py  sgym.py  sgym_training.py  simdb.py  simrunner.py  simrunner_tournament.py  sumosim_helper.py  tryout.py  udp.py  util.py
training/controller/: circle_controller.py  sgym_sample_controller.py  stay_in_field_controller.py
training/explore/: blackjack.py  qlearning.py
training/sgym/: core.py  qlearn.py  sample.py
