[tool.poetry]
name = "training"
version = "0.1.0"
description = "Training for sumosim robots"
authors = ["wwagner4"]
license = "apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "*"
typer = "*"
ruff = "*"
pymongo = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sumosim = 'training.main:app'


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

