[tool.poetry]
name = "training"
version = "0.1.0"
description = "Training for sumosim robots"
authors = ["wwagner4"]
license = "apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
dataclasses-json = ">=0.6.7"
typer = ">=0.12.5"
ruff = ">=0.6.9"
pymongo = ">=4.10.1"
matplotlib = ">=3.9.2"
gymnasium = ">=1.0.0"
pandas = ">=2.2.3"
pyyaml = ">=6.0.2"
tqdm = "^4.67.1"


[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sumo-train = 'training.main:app'


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

