[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dataclasses-json>=0.6.7",
    "gymnasium>=1.0.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pymongo>=4.10.1",
    "pyyaml>=6.0.2",
    "ruff>=0.8.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "pytest>=8.3.4",
    "markdown>=3.7",
    "dominate>=2.9.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
sumot = "training.main:app"

